@@ -2,11 +2,15 @@ include ../../../make.inc
 
 OBJS = slab.o slabwall.o slabdisp.o slabmode.o slaboverlap.o
 
-all: generalslab.o isoslab moslab
+all: generalslab.o slabmatrixcache.o isoslab moslab
 
 generalslab.o: generalslab.cpp generalslab.h ../../defs.h ../../waveguide.h \
 	../../expression.h
 	$(CC) $(FLAGS) -c generalslab.cpp
+
+slabmatrixcache.o: slabmatrixcache.cpp slabmatrixcache.h ../../defs.h \
+	../../waveguide.h ../../expression.h
+	$(CC) $(FLAGS) -c slabmatrixcache.cpp
 
 isoslab: FORCE
 	cd isoslab ; make
