@@ -11,6 +11,7 @@
 ////////////////////////////////////////////////////////////////////////////
 
 #include "scatterer.h"
+#include "primitives/slab/generalslab.h"
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -23,6 +24,9 @@ bool MultiScatterer::recalc_needed() const
   const Real eps = 1e-10;
 
   if (abs(global.lambda - last_lambda) > eps)
+    return true;
+
+  if (abs(global_slab.beta - last_beta) > eps)
     return true;
 
   if (!global.gain_mat)
@@ -87,6 +91,7 @@ void DenseScatterer::allocRT()
 
   last_lambda   = 0.0;
   last_gain_mat = Material(0.0);
+  last_beta     = 0.0;
 }
 
 
@@ -106,6 +111,7 @@ void DenseScatterer::freeRT()
 
   last_lambda   = 0.0;
   last_gain_mat = Material(0.0);
+  last_beta = 0.0;
 }
 
 
@@ -130,6 +136,7 @@ void DenseScatterer::copy_RT_from(const DenseScatterer& sc)
   last_lambda = sc.last_lambda;
   if (global.gain_mat) 
     last_gain_mat = sc.last_gain_mat;
+  last_beta = sc.last_beta;
 }
 
 
@@ -248,6 +255,7 @@ void DiagScatterer::allocRT()
 
   last_lambda   = 0.0;
   last_gain_mat = Material(0.0);
+  last_beta     = 0.0;
 }
 
 
@@ -274,6 +282,7 @@ void DiagScatterer::freeRT()
 
   last_lambda   = 0.0;
   last_gain_mat = Material(0.0);
+  last_beta     = 0.0;
 }
 
 
@@ -305,6 +314,7 @@ void DiagScatterer::copy_RT_from(const DiagScatterer& sc_d)
   last_lambda = sc_d.last_lambda;
   if (global.gain_mat) 
     last_gain_mat = sc_d.last_gain_mat;
+  last_beta = sc_d.last_beta;
 }
 
 
