@@ -1,3 +1,11 @@
+2002-01-21 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* generalslab.h: Add support for slab matrix cache.
+	* generalslab.cpp: Ditto.
+	* slabmatrixcache.h: New file.
+	* slabmatrixcache.cpp: New file.
+	* makefile: Update.
+
 2001-11-27  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* generalslab.cpp: Fix signs and normalisation.
